bpk-lib/crates/syncbat/tests/ui/operation_macro_duplicate_key.stderr
error: duplicate `descriptor` key in #[syncbat::operation]
 --> tests/ui/operation_macro_duplicate_key.rs:3:5
  |
3 |     descriptor = ECHO_AGAIN,
  |     ^^^^^^^^^^
